--- a/Backend/templates/Index.html
+++ b/Backend/templates/Index.html
@@ -42,7 +42,7 @@
 
 
         <li class="nav-item mt-5">
-            <a href="/Adminlogin"><button type="button" class="btn btn-primary text-center pad m-3"
+            <a href="/adminlogin"><button type="button" class="btn btn-primary text-center pad m-3"
                     style="width: 300px; height: 200px;  font-size: 30px;">Login as Admin</button></a>
         </li>
 
