--- a/Backend/templates/home.html
+++ b/Backend/templates/home.html
@@ -135,7 +135,7 @@
 
       {%for j,i in enumerate(result)%}
 
-      <a href="/test/{{result[j][1]}}"><img alt="" class="row_poster row_posterLarge m-3"
+      <a href="/movie/{{result[j][1]}}"><img alt="" class="row_poster row_posterLarge m-3"
           src="static/uploading/{{j+num}}.jpg"></a>
       {%endfor%}
 
@@ -146,7 +146,7 @@
 
   <!--Trending Now-->
   <div class="row">
-    <h2 class="text">TRENDING NOW</h2>
+    <h2 class="text">RECENT NOW</h2>
     <div class="row_posters m-3">
 
       {%for j,i in enumerate(result)%}
