--- a/Backend/templates/login.html
+++ b/Backend/templates/login.html
@@ -24,7 +24,7 @@
                             <div class="card-body p-5 Register">
                                 <h2 class="text-uppercase text-center mb-5 text">User Login</h2>
 
-                                <form method="POST" action="/login">
+                                <form method="POST" action="/loggedin">
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example1cg">User Name</label>
