--- a/Backend/templates/BookTheater.html
+++ b/Backend/templates/BookTheater.html
@@ -8,9 +8,6 @@
     <title>BookYourShow</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/styles.css') }}">
-
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/adminPage.css') }}"> -->
-
 </head>
 
 <body>
@@ -52,41 +49,30 @@
         <div class="col-md-2">
             <ul class="list-inline mx-auto justify-content-center">
                 <li>
-
-                    <a href="/test/{{movieID}}/booktheater/{{k[1]}}/seatbooking"><label type="button" class="text"
+                    <label type="button" class="text"
                             id=${theaterBtn}
                             style="width: 200px; height: 200px; font-size: 35px; margin-top: 20px; background-color: rgb(0, 91, 196); text-align: center; border-radius: 15px 50px;">
                             {{k[0]}}
-                            <button type="button" class="btn btn-danger tile"
-                                style="width: 140px; height: 50px; margin-top: 60px; font-size: 25px;">
-                                {{k[4]}}
-                            </button>
-
                 </li>
 
-                </label></a>
+                <li>
+                    {%for time in showtimes %}
+                    <a href="/movie/{{movieID}}/booktheater/{{k[1]}}/{{time}}/seatbooking">
+                    <button type="button" class="btn btn-danger tile"
+                        style="width: 140px; height: 50px; margin-top: 60px; font-size: 25px;">
+                        {{time}}
+                    </button> </a>
+                    {%endfor%}
+                </li>
+
+                </label>
 
             </ul>
         </div>
         {% endfor %}
 
     </div>
-    <!-- </div> -->
-    <!-- <script>
-        const colors = ["green", "blue", "red", "yellow", "orange", "pink", "purple"];
-        const button = document.getElementsByTagName("button")[0];
 
-        function ChangeColor() {
-            /* Turn the HTMLCollection into an array using spread operator */
-            const squares = document.getElementById('tile');
-            /* Give each square a random background color */
-            
-                const randomize = Math.floor(Math.random() * colors.length);
-                squares.style.backgroundColor = colors[randomize];
-            
-        };
-        ChangeColor();
-    </script> -->
     <script>
         let theaterBtn = 1
         function theaterName() {
