--- a/Backend/templates/adminlogin.html
+++ b/Backend/templates/adminlogin.html
@@ -6,17 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/RegisterLoginAdmin.css')}}">
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
 
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
 
     <section class="vh-100 bg-image">
+
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul class=flashes>
+            {%for message in messages%}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>{{message}}</strong> 
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {%endfor%}
+        </ul>
+
+
+        {% endif %}
+        {% endwith %}
         <div class="mask d-flex align-items-center h-100 gradient-custom-3">
             <div class="container h-100">
                 <div class="row d-flex justify-content-center align-items-center h-100">
@@ -25,7 +54,7 @@
                             <div class="card-body p-5 Register">
                                 <h2 class="text-uppercase text-center mb-5 text">Admin Login</h2>
 
-                                <form method="POST" action="/Adminlogin">
+                                <form method="POST" action="/adminloggedin">
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example1cg">User Name</label>
@@ -37,7 +66,7 @@
                                         <label class="form-label" for="form3Example4cg">Password</label>
                                         <input type="password" name="pass" class="form-control form-control-lg" />
                                     </div>
-<!-- 
+                                    <!-- 
                                     <div class="form-check d-flex justify-content-center mb-5">
                                         <input class="form-check-input me-2" type="checkbox" value=""
                                             id="form2Example3cg" />
@@ -50,10 +79,11 @@
 
                                     <div class="d-flex justify-content-center">
                                         <button type="submit" id="click" href="/Adminlogin"
-                                            class="btn-block btn-lg gradient-custom-4 text-body registerbtn">Login </button>
+                                            class="btn-block btn-lg gradient-custom-4 text-body registerbtn">Login
+                                        </button>
                                     </div>
 
-                                    <p class="text-center text-muted mt-5 mb-0 form-label" >Not a member ? <a
+                                    <p class="text-center text-muted mt-5 mb-0 form-label">Not a member ? <a
                                             href="/adminregistration" class="fw-bold text-body"><u
                                                 class="form-label">Register</u></a>
                                     </p>
@@ -67,6 +97,11 @@
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
