Basic Changes In UI

--- a/Backend/templates/SeatBooking.html
+++ b/Backend/templates/SeatBooking.html
@@ -89,7 +89,7 @@
                 {% if 'B'+str(i+1) in totalBookedSeats%}
                 <div class="inputGroup2">
 
-                    <label>A{{i+1}}</label>
+                    <label>B{{i+1}}</label>
                 </div> &emsp;
                 {%else%}
 
@@ -107,7 +107,7 @@
                 {% if 'C'+str(i+1) in totalBookedSeats%}
                 <div class="inputGroup2">
 
-                    <label>A{{i+1}}</label>
+                    <label>C{{i+1}}</label>
                 </div> &emsp;
                 {%else%}
 
@@ -126,7 +126,7 @@
                 {% if 'D'+str(i+1) in totalBookedSeats%}
                 <div class="inputGroup2">
 
-                    <label>A{{i+1}}</label>
+                    <label>D{{i+1}}</label>
                 </div> &emsp;
                 {%else%}
 
@@ -145,7 +145,7 @@
                 {% if 'E'+str(i+1) in totalBookedSeats%}
                 <div class="inputGroup2">
 
-                    <label>A{{i+1}}</label>
+                    <label>E{{i+1}}</label>
                 </div> &emsp;
                 {%else%}
                 <!-- <button id="seat29" name="seat29" class="seat" onclick="ChangeColor('seat29')">E{{i+1}}</button> -->
@@ -165,7 +165,7 @@
                 {% if 'F'+str(i+1) in totalBookedSeats%}
                 <div class="inputGroup2">
 
-                    <label>A{{i+1}}</label>
+                    <label>F{{i+1}}</label>
                 </div> &emsp;
                 {%else%}
                 <!-- <button id="seat35" name="seat35" class="seat" onclick="ChangeColor('seat35')">F{{i+1}}</button> -->
@@ -193,24 +193,6 @@
         </div>
         <br><br><br><br><br>
     </form>
-
-    <!-- <script type="module" src="{{ url_for('static', filename='/JS/SeatBooking.js') }}"> -->
-    <!-- <script type="module">
-        function sendEmail() {
-            Email.send({
-                Host: "smtp.gmail.com",
-                Username: "biditvalueforyourvaluables@gmail.com",
-                Password: "systango@@",
-                To: 'sanilsarathe76@gmail.com',
-                From: "biditvalueforyourvaluables@gmail.com",
-                Subject: "Ganesh",
-                Body: "sanil",
-            }).then(
-                console.log("success")
-            );
-        }
-        // sendEmail();
-    </script> -->
     
 
 </body>
