--- a/Backend/templates/BookTheater.html
+++ b/Backend/templates/BookTheater.html
@@ -65,6 +65,19 @@
                     {%endfor%}
                 </li>
 
+
+                <!-- <li>
+                    {%for animation in movie_animation %}
+                    <a href="/movie/{{movieID}}/booktheater/{{k[1]}}/{{time}}/seatbooking">
+                    <button type="button" class="btn btn-danger tile"
+                        style="width: 140px; height: 50px; margin-top: 60px; font-size: 25px;">
+                        {{animation}}
+                    </button> </a>
+                    {%endfor%}
+                </li> -->
+
+
+
                 </label>
 
             </ul>
