--- a/Backend/templates/home.html
+++ b/Backend/templates/home.html
@@ -95,7 +95,7 @@
         <img class="itemImg" src="{{ url_for('static', filename='/Images/front8.jpg') }}" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <!-- <h1 class="banner_title" >IPL 2022 Is Live</h1> -->
-          <a href="https://www.youtube.com/watch?v=9Vo5YjwIALQ"><button class="banner_button">Play</button></a>
+          <a href="https://www.youtube.com/watch?v=9Vo5YjwIALQ">`<button class="banner_button">Play</button></a>
           <!-- <a href=""><button class="banner_button" style="background-color: black;">My List</button></a> -->
         </div>
       </div>
@@ -149,8 +149,8 @@
     <h2 class="text">RECENT NOW</h2>
     <div class="row_posters m-3">
 
-      {%for j,i in enumerate(result)%}
-      <a href="/movie/{{result[j][1]}}"><img alt="" class="row_poster row_posterLarge m-3"
+      {%for j,i in enumerate(reversed(result))%}
+      <a href="/movie/{{result[len(result)-1-j][1]}}"><img alt="" class="row_poster row_posterLarge m-3"
           src="static/upload/{{j+num+1}}.jpg"></a>
       {%endfor%}
       <!-- <img src="{{ url_for('static', filename='/Images/img7.jpg') }}" alt="" class="row_poster row_posterLarge m-3">
