--- a/Backend/templates/showMovies.html
+++ b/Backend/templates/showMovies.html
@@ -51,7 +51,7 @@
           <img src="{{ url_for('static', filename='/Images/logo1.png') }}" alt="" class="nav_logo">
     
           <center>
-            <div class="text">Booked Movies</div>
+            <div class="headingText">Booked Movies</div>
           </center>
     
           <div class="text" id="userName"></div>
