changes in admi and user login page

--- a/Backend/static/CSS/RegisterLogin.css
+++ b/Backend/static/CSS/RegisterLogin.css
@@ -40,9 +40,11 @@
 .bg-image {
     /* background-repeat: no-repeat; */
     /* background-size: cover; */
-    background-image: url("../../static/Images/theater.jpg");
+    background-image: url("../../static/Images/bgimage.jpg");
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
