--- a/Backend/templates/adminregistration.html
+++ b/Backend/templates/adminregistration.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/RegisterLogin.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/CSS/RegisterLoginAdmin.css')}}">
 
 </head>
 
