--- a/Backend/templates/login.html
+++ b/Backend/templates/login.html
@@ -12,10 +12,23 @@
 
 </head>
 
-<body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<body>        
 
     <section class="vh-100 bg-image">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul class=flashes>
+            {%for message in messages%}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>{{message}}</strong> 
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {%endfor%}
+        </ul>
+
+
+        {% endif %}
+        {% endwith %}
         <div class="mask d-flex align-items-center h-100 gradient-custom-3">
             <div class="container h-100">
                 <div class="row d-flex justify-content-center align-items-center h-100">
@@ -66,11 +79,12 @@
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         function r(){
         let user1 = document.getElementById('uname').value;
-        console.log(user1);
-        localStorage.setItem('username', user1);
+        // console.log(user1);
+        sessionStorage.setItem('username', user1);
     }
     </script>
 </body>
